Fixing some more layout issues.

--- a/static/global/style.css
+++ b/static/global/style.css
@@ -478,7 +478,7 @@ text-decoration: none;
 .page_item{
   padding: 25px 0 25px 38px;
   border-bottom: dotted 2px #72C445;
-  width: 500px;
+  width: 555px;
   overflow: hidden;
 }
 
